--- a/FakeBlog/FakeBlog.html
+++ b/FakeBlog/FakeBlog.html
@@ -59,10 +59,10 @@
             <li>2001-2003 Washington Wizards</li>
         </ul>
         <a href ="https://Google.com"> Click for Awesome Highlight Video</a>
-        <form ction="process.php" method="post">
+        <form action="process.php" method="post">
             <h2>Please take this short survey</h2>
 
-            <label for="text">Email:  </label>
+            <label for="email">Email:  </label>
             <input type="text" id="email" name="email"><br>
 
             <input type="radio" id="yes" name="yes" value="yes">
