--- a/RegistrationForm/RegistrationForm.html
+++ b/RegistrationForm/RegistrationForm.html
@@ -9,23 +9,23 @@
         <form action="process.php" method="post">
             <p>My Registration Form </p> <br>
             
-            <label for="first name">First Name </label>
-            <input type="text" id="first name" value=""><br>
+            <label for="firstname">First Name </label>
+            <input type="text" id="firstname" value=""><br>
 
-            <label for="last name">Last Name </label>
-            <input type="text" id="last name" value=""><br>
+            <label for="lastname">Last Name </label>
+            <input type="text" id="lastname" value=""><br>
 
             <label for="email">email </label>
-            <input type="text" id="lastname" value=""><br>
+            <input type="text" id="email" value=""><br>
 
             <label for="password">Password </label>
             <input type="password" id="password" name="password"><br>
 
-            <label for="pw confirm">PW Confirm </label>
-            <input type="password" id="pw confirm" name="pw confirm"><br>
+            <label for="pwconfirm">PW Confirm </label>
+            <input type="password" id="pwconfirm" name="pwconfirm"><br>
 
             <label for="birthday">Birthday </label>
-            <input type="date" id="birthday" name="birthday" value="mm/dd/yyyy"><br>
+            <input type="date" id="birthday" name="birthday"><br>
 
             <label for="male">Male</label>
             <input type="radio" id="male" name="gender" value="male">
@@ -34,13 +34,13 @@
             <input type="radio" id="female" name="gender" value="female">
 
             <label for="decline">Other</label>
-            <input type="radio" id="decline" name="gender" value="decline">
+            <input type="radio" id="decline" name="gender" value="decline"><br>
 
-            <p>A short Description about yourself: </p>
-            <textarea name="description"></textarea><br>
+            <label for="desc">A short Description about yourself: </label><br>
+            <textarea name="desc"></textarea><br>
 
-            <label for="favorite language">Favorite language</label>
-            <select name="languages" id="languages">
+            <label for="language">Favorite language</label>
+            <select name="language" id="language">
                 <option value="javascript">JavaScript</option>
                 <option value="java">Java</option>
                 <option value="python">Python</option>
